add discover
